--- a/chapter9.css
+++ b/chapter9.css
@@ -12,33 +12,43 @@ body {
 header {
   background-color: #ff9a4b;
   height: 50px;
+  width: 100%;
 }
 
 .box {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  padding-top: 50px;
-  padding-bottom: 50px;
 }
 
 .box-content {
+  /* main */
   display: flex;
   justify-content: center;
   width: 960px;
-  margin: 0 auto;
+  margin: 50px auto;
+  /* o autoから変更 */
 }
 
 .boxes {
+  /* step-box */
   width: 300px;
   background-color: #eeeeee;
   padding: 10px;
   position: relative;
+  margin-right: 30px;
+  /* ここで右に30pxあける */
 }
 
-.boxes:nth-child(2) {
-  margin: 0 30px 0 30px;
+/* .boxes:nth-child(2) { */
+/* margin: 0 30px 0 30px; */
+/* } */
+/* 真ん中のボックスの左右を30pxあける。この記述消す */
+
+.boxes:last-child {
+  margin-right: 0%;
 }
+/* この記述追加 */
 
 .img1 {
   background-image: url(img/flow01.png);
@@ -78,6 +88,7 @@ h3 {
 footer {
   background-color: #aaaaaa;
   height: 50px;
+  width: 100%;
 }
 
 @media screen and (max-width: 768px) {
@@ -88,9 +99,16 @@ footer {
 
   .boxes {
     margin: 0 auto;
+    width: 90%;
+    margin-bottom: 20px;
   }
 
-  .boxes:nth-child(2) {
-    margin: 20px auto 20px auto;
+  /* .boxes:nth-child(2) { */
+  /* margin: 20px auto 20px auto; */
+  /* } */
+  /* ２番目のボックスのみ上下を指定する方法ではだめっぽい？ */
+
+  .boxes:last-child {
+    margin-right: auto;
   }
 }
